# projet-nihil

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.py  format-code.json  format-code.py
cmake/: .keep  InstallEmeraudeEngine.cmake  SetupEmeraudeEngine.cmake
dependencies/: .keep
resources/data/: .keep
resources/linux/: .keep
resources/mac/: .keep
resources/windows/: .keep
src/: Application.cpp  Application.hpp  ApplicationSettingKeys.hpp  config.hpp.in
src/Boot/linux/: main.cpp
src/Boot/mac/: main.mm
src/Boot/windows/: main.cpp
